using z-index to fix the element overlapping problem
which created by the render engine...(long story here...)

Notice: z-index only works to the positioned element and will creat
STACKING CONTEXT!!! (another long story...)

--- a/Positioned/fixed-positioned/style.css
+++ b/Positioned/fixed-positioned/style.css
@@ -33,6 +33,7 @@ button {
     bottom: 0;
     left: 0;
     background-color: rgba(0, 0, 0, .5);
+    z-index: 1;
 }
 
 .modal-body {
@@ -44,6 +45,7 @@ button {
     padding: 2em 3em;
     background-color: white;
     overflow: auto;
+    z-index: 2;
 }
 
 .modal-close {
